# overlib

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs
dlsym_hook/: Cargo.toml
dlsym_hook/src/: lib.rs
glad-gl/src/: gl.rs
real_dlsym/: Makefile  elfhacks.c  elfhacks.h  main.c
src/: gl_utils.rs  lib.rs  painter.rs
src/backends/opengl/: painter.rs
src/frontends/: mod.rs
src/frontends/egl/: mod.rs
src/frontends/glx/: mod.rs
tests/: a.out  main.c  main2.c  nodl.c
