[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
egui = "0.18.1"
lazy_static = "1.4.0"
glad-gl = { path = "./glad-gl/" }
